--- a/css/log-in-modal.css
+++ b/css/log-in-modal.css
@@ -1,7 +1,7 @@
 /* MODAL LAYOUT */
 .modal {
     display: none; /* displays block using js */
-    height: 430px;
+    height: 460px;
     width: 500px;
     background-color: whitesmoke;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -48,11 +48,12 @@
 
 .form-title {
     font-size: 1.7rem;
-    margin: 0 0 20px;
+    margin: 20px 0 20px;
 }
 
 .form-input-wrapper {
     position: relative;
+    margin: 1rem 0 .3rem;
 }
 
 .form-input-wrapper i {
@@ -69,14 +70,20 @@
     border: 2px solid rgba(0, 0, 0, 0.5);
 }
 
+.form-input::-webkit-input-placeholder {
+    color: rgb(56, 51, 51);
+    font-weight: bold;
+}
+
 .form-input:focus {
     outline: none;
-    border-color: rgba(59, 119, 215, 0.5);
+    border: 2px solid rgba(59, 119, 215, 0.5);
+    box-shadow: rgba(59, 119, 215, .4) 0px 0px 0px 3px;
 }
 
 .form-login-btn {
     cursor: pointer;
-    margin-top: 10px;
+    margin-top: 20px;
     padding: 12px 30px;
     font-size: 1rem;
     font-weight: bolder;
@@ -88,11 +95,11 @@
 }
 
 .form-login-btn:hover, .form-forgot-pass-link:hover {
-    opacity: 0.7;
+    opacity: 0.9;
 }
 
 .form-login-btn:active, .form-forgot-pass-link:active {
-    opacity: 0.9;
+    opacity: 0.7;
 }
 
 .form-forgot-pass-link {
@@ -101,14 +108,49 @@
     color: rgb(59, 119, 215);
 }
 
+/* FORM VALIDATION */
+.error-input {
+    border-color: #dc3545;
+    box-shadow: rgba(220, 53, 69, .4) 0px 0px 0px 3px;
+}
+
+.error-input:focus {
+    border-color: #dc3545;
+    box-shadow: rgba(220, 53, 69, .4) 0px 0px 0px 3px;
+}
+
+.form-input-validation {
+    display: none; /* displays block using js */
+    text-align: start;
+    font-size: 13px;
+    color: #dc3545;
+    margin: 5px 0 0 5px;
+}
+
+#form-submit-validation {
+    display: none; /* displays block using js */
+    background: rgba(220, 53, 69, .4);
+    padding: 15px 13px;
+    border-radius: 5px;
+    font-size: 13px;
+    text-align: start;
+    margin-top: 5px;
+}
+
+#form-submit-validation > i {
+    margin-right: 5px;
+    color: #dc3545;
+}
+
 /* MODAL FOOTER */
 .modal-footer {
     text-align: center;
+    margin-top: 50px;
 }
 
 .modal-footer > p {
-    margin-top: 30px;
     font-size: 0.9rem;
+    margin-top: 25px;
 }
 
 .sign-up-link {
