--- a/css/login-modal.css
+++ b/css/login-modal.css
@@ -85,7 +85,7 @@
     box-shadow: rgba(220, 53, 69, .4) 0px 0px 0px 3px;
 }
 
-.form-input-validation {
+.login-input-validation-msg {
     display: none; /* displays block using js */
     text-align: start;
     font-size: 13px;
@@ -93,11 +93,11 @@
     margin: 5px 0 0 5px;
 }
 
-.form-input-validation > i {
+.login-input-validation-msg > i {
     margin-right: 7px;
 }
 
-#form-login-validation {
+#login-submit-validation-msg {
     display: none; /* displays block using js */
     background: rgba(220, 53, 69, .4);
     padding: 15px 13px;
@@ -107,7 +107,7 @@
     margin-top: 5px;
 }
 
-#form-submit-validation > i {
+#login-submit-validation-msg > i {
     margin-right: 5px;
     color: #dc3545;
 }
