--- a/css/global.css
+++ b/css/global.css
@@ -1,5 +1,208 @@
 /* ALL GLOBAL STYLINGS */
 
+* {
+    font-family: 'Poppins', sans-serif;
+}
+
+body {
+    background-color: whitesmoke;
+    margin: 0;
+    padding: 0;
+}
+
+/* START OF NAVBAR SECTION */
+
+header {
+    background: #1F2937;
+    padding: 10px 40px;
+}
+
+nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.nav--logo-wrapper {
+    display: flex;
+    align-items: center;
+}
+
+.main-logo-title {
+    color: whitesmoke;
+    font-size: 1.3rem;
+}
+
+.nav--links-wrapper {
+    display: flex;
+    gap: 40px;
+    list-style: none;
+}
+
+.main-logo {
+    height: 5rem;
+}
+
+.nav--logo-wrapper a {
+    text-decoration: none;
+    
+}
+
+.nav--links-wrapper a {
+    text-decoration: none;
+    color: whitesmoke;
+    font-size: 1.2rem;
+    font-weight: bolder;
+    transition: color 200ms ease-in-out;
+    
+}   
+
+.nav--links-wrapper a:hover {
+    color: rgba(59,119,215, 1.0);
+}
+
+.nav--links-wrapper a:active {
+    color: rgba(59,119,215, 0.5);
+}
+
+
+/* LOGIN BUTTON */
+.login-btn {
+    border: none;
+    border-radius: 3px;
+    background: whitesmoke;
+    padding: 10px 20px;
+    cursor: pointer;
+    font-size: 1rem;
+    font-weight: bold;
+    font-family: 'Poppins', sans-serif;
+    color: black;
+    transition: all 200ms ease-in-out;
+}
+
+.login-btn i {
+    margin-left: 5px;
+}
+
+.login-btn:hover {
+    background: rgba(59,119,215, 1.0);
+    color: whitesmoke;
+}
+
+.login-btn:active {
+    background: rgba(59,119,215, 0.7);
+    color: rgba(245,245,245, 0.7);
+}
+
+/* USER PROFILE */
+
+.user-avatar {
+    width: 40px;
+    border-radius: 50%;
+    transition: opacity .3s ease-in-out;
+    cursor: pointer;
+    user-select: none;
+}
+
+.user-avatar:hover {
+    opacity: 0.7;
+}
+
+.user-avatar:active {
+    opacity: 0.5;
+}
+
+/* SUB-MENU */
+.sub-menu-wrapper {
+    position: absolute;
+    top: 12vh;
+    right: 8%;
+    width: 320px;
+    max-height: 0px;
+    overflow: hidden;
+    z-index: 100;
+    transition: max-height .3s ease-in-out;
+}
+
+.sub-menu-wrapper.open-sub-menu {
+    max-height: 400px;
+}
+
+.sub-menu {
+    background: #1c2431;
+    padding: 10px;
+    margin: 10px;
+    border-radius: 7px;
+}
+
+.user-info {
+    display: flex; 
+    align-items: center;
+    padding: 0 8px;
+}
+
+.user-info .sub-menu-avatar {
+    width: 35px;
+    border-radius: 50%;
+    margin-right: 15px;
+    align-self: center;
+}
+
+.user-info .sub-menu-name {
+    font-size: 1rem;
+    font-weight: bold;
+    color: whitesmoke;
+}
+
+.sub-menu hr {
+    border: 0;
+    height: 1px;
+    width: 100%;
+    background: rgba(245,245,245, 0.5);
+    margin: 10px 0 10px;
+}
+
+.sub-menu-link {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: whitesmoke;
+    padding: 0 8px;
+    border-radius: 10px;
+    transition: background-color 0.3s;
+}
+
+
+.sub-menu-link i {
+    border: none;
+    padding: 10px;
+    background: rgba(128, 128, 128, 0.5);
+    border-radius: 50%;
+    margin-right: 13px;
+    font-size: 20px;
+}
+
+.sub-menu-link p {
+    width: 100%;
+}
+
+.sub-menu-link span {
+    font-size: 30px;
+    color: rgba(128, 128, 128);
+}
+
+.sub-menu-link:hover {
+    background: #e5e5e520;
+}
+
+.sub-menu-link:active {
+    background: #e5e5e540;
+}
+
+/* END OF NAVBAR SECTION */
+
+/* START OF MODAL SECTION */
+
 /* MODAL CLOSE BUTTON */
 .modal-close-btn-wrapper {
     text-align: end;
@@ -49,5 +252,7 @@
 .form-btn:active, .form-link:active {
     opacity: 0.7;
 }
+
+/* END OF MODAL SECTION */
 
 
