--- a/css/home.css
+++ b/css/home.css
@@ -1,39 +1,8 @@
-* {
-    font-family: 'Poppins', sans-serif;
-}
-
-body {
-    background-color: whitesmoke;
-    margin: 0;
-    padding: 0;
-}
-
 /* LAYOUTS */
-header {
-    background: #1F2937;
-    padding: 10px 20px;
-}
-
-nav {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.nav--logo-wrapper {
-    display: flex;
-    align-items: center;
-}
-
-.nav--links-wrapper {
-    display: flex;
-    gap: 40px;
-    list-style: none;
-}
 
 .hero {
     width: 100%;
-    height: 75vh;
+    height: 85vh;
     background-image: url("../img/home/main-bg-library.png");
     background-size: cover;
     background-position: center;
@@ -49,81 +18,25 @@ nav {
     justify-content: center;
     align-items: center;
     background: rgba(0, 0, 0, 0.5);
+    /* border: 1px solid red; */
 }
 
 /* TYPOGRAPHY */
-.main-logo-title {
-    color: whitesmoke;
-    font-size: 1.3rem;
-}
-
 .hero--title, .hero--subtitle {
     color: whitesmoke;
     text-shadow: 0 0 1px whitesmoke;
 }
 
 .hero--title {
-    font-size: 3rem;
+    font-size: 3.3rem;
     font-weight: bolder;
-    margin-bottom: 0;
+    margin-bottom: -20px;
+
 }
 
 .hero--subtitle {
     font-weight: 400;
     margin-bottom: 5rem;
-}
-
-/* IMAGES */
-.main-logo {
-    height: 5rem;
-}
-
-/* LINKS */
-.nav--logo-wrapper a {
-    text-decoration: none;
-}
-
-.nav--links-wrapper a {
-    text-decoration: none;
-    color: whitesmoke;
-    font-size: 1.2rem;
-    font-weight: bolder;
-    transition: color 200ms ease-in-out;
-}   
-
-/* BUTTONS */
-.login-btn {
-    border: none;
-    border-radius: 3px;
-    background: whitesmoke;
-    padding: 10px 20px;
-    cursor: pointer;
-    font-size: 1rem;
-    font-weight: bold;
-    font-family: 'Poppins', sans-serif;
-    color: black;
-    transition: all 200ms ease-in-out;
-}
-
-.login-btn i {
-    margin-left: 5px;
-}
-
-/* HOVERS AND ACTIVES */
-.nav--links-wrapper a:hover {
-    color: rgba(59,119,215, 1.0);
-}
-
-.nav--links-wrapper a:active {
-    color: rgba(59,119,215, 0.5);
-}
-
-.login-btn:hover {
-    background: rgba(59,119,215, 1.0);
     color: whitesmoke;
 }
 
-.login-btn:active {
-    background: rgba(59,119,215, 0.7);
-    color: rgba(245,245,245, 0.7);
-}
