--- a/css/login-modal.css
+++ b/css/login-modal.css
@@ -101,17 +101,20 @@
 }
 
 #login-submit-validation-msg {
-    display: none; /* displays block using php */
+    display: none; /* displays block using js */
     background: rgba(220, 53, 69, .4);
     padding: 15px 13px;
-    border-radius: 5px;
+    border-radius: 6px;
     font-size: 13px;
     text-align: start;
     margin-top: 5px;
 }
 
-#login-submit-validation-msg > i {
+#login-submit-validation-msg i {
     margin-right: 5px;
+}   
+
+#login-submit-validation-msg b {
     color: #dc3545;
 }
 
