added new things in forgot-password php

--- a/css/forgot-password.css
+++ b/css/forgot-password.css
@@ -10,11 +10,17 @@ body {
     width: 100%;
 }
 
+/* HEADER */
+
 header {
     background: #1F2937;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+header a {
+    text-decoration: none;
 }
 
 header .main-logo {
@@ -26,11 +32,15 @@ header .main-logo-title {
     font-size: 1.3rem;
 }
 
+/* MAIN */
+
+/* GLOBAL STYLES */
 main {
     margin: 50px auto;
     background: whitesmoke;
     width: 400px;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    border-radius: 5px;
 }
 
 hr {
@@ -42,15 +52,132 @@ hr {
     
 }
 
-.wrapper {
+.reset-password-wrapper, 
+.new-password-wrapper {
     padding: 15px 30px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
+.reset-password-wrapper {
+    display: none;
+}
 
-.wrapper--header h1{
-    font-size: 1.5rem;
+.reset-password-wrapper--header h1, 
+.new-password-wrapper--header h1 {
+    font-size: 1.3rem;
     margin: 0;
 }
+
+.reset-password-wrapper--footer,
+.new-password-wrapper--footer {
+    text-align: end;
+}
+
+.reset-password-wrapper--footer .cancel-link,
+.new-password-wrapper--footer .not-you-link {
+    background: rgba(128, 128, 128, 0.5);
+    padding: 5px 15px;
+    text-decoration: none;
+    color: rgba(0, 0, 0, 0.7);
+    border-radius: 5px;
+    font-size: 14px;
+    font-weight: bold;
+    margin-right: 5px;
+}
+
+.reset-password-wrapper--footer .reset-btn,
+.new-password-wrapper--footer .change-btn {
+    border: none;
+    background: rgb(59, 119, 215);
+    padding: 5px 15px;
+    color: whitesmoke;
+    border-radius: 5px;
+    font-size: 14px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.reset-password-wrapper--footer .cancel-link:hover,
+.reset-password-wrapper--footer .reset-btn:hover,
+.new-password-wrapper--footer .not-you-link:hover,
+.new-password-wrapper--footer .change-btn:hover {
+    opacity: 0.8;
+}
+
+.reset-password-wrapper--footer .cancel-link:active,
+.reset-password-wrapper--footer .reset-btn:active,
+.new-password-wrapper--footer .not-you-link:active,
+.new-password-wrapper--footer .change-btn:active {
+    opacity: 0.6;
+}
+
+
+/* RESET PASSWORD WRAPPER BODY */
+
+.reset-password-wrapper--body .validation {
+    display: none;
+    border: 1px solid red;
+    padding: 12px;
+    margin: 7px 0;
+    background: #dc354530;
+}
+
+.reset-password-wrapper--body .validation h3 {
+    font-size: 15px;
+    margin: 0;
+}
+
+.reset-password-wrapper--body .validation small {
+    display: inline-block;
+    line-height: 1.2rem;
+}
+
+.reset-password-wrapper--body .validation.show {
+    display: block;
+}
+
+
+.reset-password-wrapper--body p {
+    font-size: 15px;
+    margin: 0;
+}   
+
+.reset-password-wrapper--body input {
+    box-sizing: border-box;
+    width: 100%;
+    padding: 10px 20px 10px 10px;
+    border-radius: 3px;
+    border: 2px solid rgba(0, 0, 0, 0.5);
+    background-color: transparent;
+    margin: 10px 0;
+}
+
+.reset-password-wrapper--body input:focus {
+    outline: none;
+    border: 2px solid rgba(59, 119, 215, 0.5);
+    box-shadow: rgba(59, 119, 215, .4) 0px 0px 0px 3px;
+}
+
+
+/* NEW PASSWORD WRAPPER BODY */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
