forgot password is fully functional

--- a/css/forgot-password.css
+++ b/css/forgot-password.css
@@ -17,6 +17,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 10px 0;
 }
 
 header a {
@@ -34,15 +35,6 @@ header .main-logo-title {
 
 /* MAIN */
 
-/* GLOBAL STYLES */
-main {
-    margin: 50px auto;
-    background: whitesmoke;
-    width: 400px;
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-    border-radius: 5px;
-}
-
 hr {
     border: 0;
     height: 1px;
@@ -54,6 +46,11 @@ hr {
 
 .reset-password-wrapper, 
 .new-password-wrapper {
+    margin: 50px auto;
+    background: whitesmoke;
+    width: 400px;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    border-radius: 5px;
     padding: 15px 30px;
     display: flex;
     flex-direction: column;
@@ -61,6 +58,10 @@ hr {
 }
 
 .reset-password-wrapper {
+    display: block;
+}
+
+.new-password-wrapper {
     display: none;
 }
 
@@ -68,6 +69,24 @@ hr {
 .new-password-wrapper--header h1 {
     font-size: 1.3rem;
     margin: 0;
+}
+
+.reset-password-wrapper--body input,
+.new-password-wrapper--body input {
+    box-sizing: border-box;
+    width: 100%;
+    padding: 10px 20px 10px 10px;
+    border-radius: 3px;
+    border: 2px solid rgba(0, 0, 0, 0.5);
+    background-color: transparent;
+    margin: 10px 0;
+}
+
+.reset-password-wrapper--body input:focus,
+.new-password-wrapper--body input:focus {
+    outline: none;
+    border: 2px solid rgba(59, 119, 215, 0.5);
+    box-shadow: rgba(59, 119, 215, .4) 0px 0px 0px 3px;
 }
 
 .reset-password-wrapper--footer,
@@ -85,6 +104,7 @@ hr {
     font-size: 14px;
     font-weight: bold;
     margin-right: 5px;
+    transition: opacity 200ms ease-in;
 }
 
 .reset-password-wrapper--footer .reset-btn,
@@ -97,6 +117,7 @@ hr {
     font-size: 14px;
     font-weight: bold;
     cursor: pointer;
+    transition: opacity 200ms ease-in;
 }
 
 .reset-password-wrapper--footer .cancel-link:hover,
@@ -114,13 +135,12 @@ hr {
 }
 
 
-/* RESET PASSWORD WRAPPER BODY */
-
+/* RESET PASSWORD BODY INDIVIDUAL STYLES */
 .reset-password-wrapper--body .validation {
     display: none;
     border: 1px solid red;
     padding: 12px;
-    margin: 7px 0;
+    margin: 15px 0 7px;
     background: #dc354530;
 }
 
@@ -144,30 +164,44 @@ hr {
     margin: 0;
 }   
 
-.reset-password-wrapper--body input {
-    box-sizing: border-box;
-    width: 100%;
-    padding: 10px 20px 10px 10px;
-    border-radius: 3px;
-    border: 2px solid rgba(0, 0, 0, 0.5);
-    background-color: transparent;
-    margin: 10px 0;
+/* NEW PASSWORD BODY INDIVIDUAL STYLES */
+.new-password-wrapper--body p {
+    margin: 0;
+    font-size: 15px;
 }
 
-.reset-password-wrapper--body input:focus {
-    outline: none;
-    border: 2px solid rgba(59, 119, 215, 0.5);
-    box-shadow: rgba(59, 119, 215, .4) 0px 0px 0px 3px;
+.new-password-wrapper--body small {
+    color: rgb(59, 119, 215);
+    font-weight: bold;
 }
 
+.new-password-wrapper--body .password-validation {
+    display: none;
+    border: 1px solid red;
+    padding: 12px;
+    margin: 7px 0 15px;
+    background: #dc354530;
+    font-size: 13px;
+}
 
-/* NEW PASSWORD WRAPPER BODY */
+.new-password-wrapper--body .password-validation.show {
+    display: block;
+}
 
+.password-validation span {
+    font-weight: bold;
+    color: #dc3545;
+}
 
+.new-password-wrapper--body .password-validation.show {
+    display: block;
+}
 
-
-
-
+/* SWEET ALERT CUSTOM STYLES */
+.button {
+    font-weight: bold !important;
+    color: whitesmoke !important;
+}
 
 
 
