added ui on settings page

--- a/css/forgot-password.css
+++ b/css/forgot-password.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    background-color: rgba(211, 211, 211, 0.3);
+    background-color: #e1e1e1;
     margin: 0;
     padding: 0;
     height: 100vh;
@@ -33,6 +33,31 @@ header .main-logo-title {
     font-size: 1.3rem;
 }
 
+/* Forgot Password Header */
+.settings-header {
+    position: relative;
+    padding: 0 15%;
+    margin: 50px 0 5px;
+    height: 50px;
+}
+
+.settings-header hr {
+    border: none;
+    height: 1px;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.8);
+}
+
+.settings-header > h1 {
+    padding: 10px 30px;
+    background: #e1e1e1;
+    color:rgb(59,119,215);
+    position: absolute;
+    left: 50%;
+    bottom: -5px;
+    transform: translate(-50%, 0);
+}
+
 /* MAIN */
 
 hr {
@@ -46,7 +71,7 @@ hr {
 
 .reset-password-wrapper, 
 .new-password-wrapper {
-    margin: 50px auto;
+    margin: 10px auto;
     background: whitesmoke;
     width: 400px;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
