--- a/css/settings.css
+++ b/css/settings.css
@@ -387,22 +387,29 @@ input:disabled  {
 .first-name-wrapper.error input,
 .last-name-wrapper.error input,
 .address-input.error input,
-.phone-wrapper.error input {
+.phone-wrapper.error input,
+.birthday-wrapper.error input {
     border-color: #dc3545 !important;
 }
 
 .first-name-wrapper.error input:focus,
 .last-name-wrapper.error input:focus,
 .address-input.error input:focus,
-.phone-wrapper.error input:focus {
+.phone-wrapper.error input:focus,
+.birthday-wrapper.error input:focus {
     box-shadow: rgba(220, 53, 69, .4) 0px 0px 0px 3px !important; 
 }
 
 .first-name-wrapper.error .validation,
 .last-name-wrapper.error .validation,
 .address-input.error .validation,
-.phone-wrapper.error .validation {
+.phone-wrapper.error .validation,
+.birthday-wrapper.error .validation {
     display: inline-block;
+}
+
+.gender-input.error .validation {
+    display: block !important;
 }
 
 .validation {
