--- a/css/settings.css
+++ b/css/settings.css
@@ -181,6 +181,13 @@ header .main-logo-title {
     color:rgb(59,119,215);
 }
 
+.password-tip {
+    display: none;
+    color: #00000070;
+    font-size: 14px;
+    margin-top: 4px;
+}
+
 .delete-account > h3 {
     color:rgba(255, 0, 0, .8)
 }
@@ -190,7 +197,7 @@ header .main-logo-title {
 .delete-account > p,
 .logout-account > p {
     color:rgba(0, 0, 0, 0.8);
-    font-size: 16px;
+    font-size: 15px;
     margin-bottom: 5px;
 }
 
@@ -245,8 +252,8 @@ input[type=number] {
 .address-input,
 .gender-input,
 .email-display-input,
-.current-password-input,
-.new-email-input,
+.current-password-wrapper,
+.new-email-wrapper,
 .password-display-input,
 .old-password-input,
 .new-password-inputs {
@@ -383,28 +390,15 @@ input:disabled  {
     display: none;
 }
 
-/* Error Handling */
-.first-name-wrapper.error input,
-.last-name-wrapper.error input,
-.address-input.error input,
-.phone-wrapper.error input,
-.birthday-wrapper.error input {
+.error input {
     border-color: #dc3545 !important;
 }
 
-.first-name-wrapper.error input:focus,
-.last-name-wrapper.error input:focus,
-.address-input.error input:focus,
-.phone-wrapper.error input:focus,
-.birthday-wrapper.error input:focus {
-    box-shadow: rgba(220, 53, 69, .4) 0px 0px 0px 3px !important; 
+.error input:focus {
+    box-shadow: rgba(220, 53, 69, .4) 0px 0px 0px 3px !important;
 }
 
-.first-name-wrapper.error .validation,
-.last-name-wrapper.error .validation,
-.address-input.error .validation,
-.phone-wrapper.error .validation,
-.birthday-wrapper.error .validation {
+.error .validation {
     display: inline-block;
 }
 
@@ -417,6 +411,17 @@ input:disabled  {
     color: #dc3545;
     line-height: 20px;
     margin-top: 4px;
+}
+
+/* SWEET ALERT CUSTOM STYLES */
+.swal-button {
+    font-weight: bold !important;
+    color: whitesmoke !important;
+}
+
+.swal-validation-msg {
+    font-weight: bold !important;
+    color:rgba(255, 0, 0, .6) !important;
 }
 
 /* ------END OF MAIN------ */
