--- a/css/global.css
+++ b/css/global.css
@@ -85,7 +85,7 @@ nav {
 }
 
 .login-btn:hover {
-    background: rgba(59,119,215, 1.0);
+    background: rgba(59,119,215, 0.7);
     color: whitesmoke;
 }
 
@@ -97,7 +97,7 @@ nav {
 /* USER PROFILE */
 
 .user-avatar {
-    width: 40px;
+    width: 50px;
     border-radius: 50%;
     cursor: pointer;
     user-select: none;
@@ -250,4 +250,36 @@ nav {
 
 /* END OF MODAL SECTION */
 
+
+/* FOOTER SECTION */
+footer {
+    padding: 20px;
+    background-color: #1c2431;
+    display: flex;
+    color: whitesmoke;
+    gap: 100px;
+    justify-content: center;
+}
+
+.div1 {
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+}
+
+.div2 {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.div3 a {
+    text-decoration: none;
+}
+
+.div3 i {
+    font-size: 25px;
+    color: whitesmoke;
+    margin-right: 10px;
+}
 
